--- a/base/build.gradle
+++ b/base/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'maven-publish'
 }
 
 android {
@@ -66,19 +65,6 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.expresso_version"
 }
 
-afterEvaluate {
-    publishing{
-        publications{
-            release(MavenPublication){
-                from components.release
-                groupId = 'com.github.mirzatahirbaig'
-                artifactId = 'base_module'
-                version = '1.0'
-            }
-        }
-    }
-}
-
 
 task deleteJar(type: Delete) {
     delete 'libs/base-sdk.jar'
@@ -88,7 +74,7 @@ task createJar(type: Copy) {
     from('build/intermediates/aar_main_jar/release/')
     into('libs/')
     include('classes.jar')
-    rename('classes.jar', 'base-android-sdk.jar')
+    rename('classes.jar', 'base-sdk.jar')
 }
 
 createJar.dependsOn(deleteJar, build)
