--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.mobizion.baseapplication"
         minSdk 21
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -65,4 +65,6 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$rootProject.test_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.expresso_version"
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+    api 'com.intuit.sdp:sdp-android:1.0.6'
+    api 'com.intuit.ssp:ssp-android:1.0.6'
 }
