--- a/base/build.gradle
+++ b/base/build.gradle
@@ -38,31 +38,37 @@ android {
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:$rootProject.core_version"
-    testImplementation "junit:junit:$rootProject.junit_version"
-    implementation "androidx.legacy:legacy-support-v4:$rootProject.legacy_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines_version"
-    implementation "androidx.core:core-ktx:$rootProject.core_version"
-    implementation "androidx.appcompat:appcompat:$rootProject.app_compact_version"
-    implementation "com.google.android.material:material:$rootProject.material_version"
-    implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraint_version"
-    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.interceptor_version"
-    implementation("org.jetbrains.kotlin:kotlin-reflect:$rootProject.reflect_version")
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines_version"
-    implementation("androidx.room:room-runtime:$rootProject.room_version")
-    annotationProcessor "androidx.room:room-compiler:$rootProject.room_version"
+    api "androidx.core:core-ktx:1.8.0"
+    testApi "junit:junit:4.13.2"
+    api "androidx.legacy:legacy-support-v4:1.0.0"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    api "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    api "androidx.core:core-ktx:1.8.0"
+    api "androidx.appcompat:appcompat:1.5.0"
+    api "com.google.android.material:material:1.6.1"
+    api "androidx.constraintlayout:constraintlayout:2.1.4"
+    api "com.squareup.retrofit2:retrofit:2.9.0"
+    api "com.squareup.retrofit2:converter-gson:2.9.0"
+    api "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
+
+    api "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
     // To use Kotlin annotation processing tool (kapt)
-    kapt("androidx.room:room-compiler:$rootProject.room_version")
+    kapt("androidx.room:room-compiler:2.4.3")
     // optional - Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:$rootProject.room_version")
-    implementation "io.insert-koin:koin-core:$rootProject.koin_version"
+    api "androidx.room:room-ktx:2.4.3"
+    api "io.insert-koin:koin-core:3.1.5"
     // Koin Test features
-    testImplementation "io.insert-koin:koin-test:$rootProject.koin_version"
-    implementation "io.insert-koin:koin-android:$koin_version"
-    androidTestImplementation "androidx.test.ext:junit:$rootProject.test_junit_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.expresso_version"
+    testApi "io.insert-koin:koin-test:3.1.5"
+    api "io.insert-koin:koin-android:3.1.5"
+    androidTestApi "androidx.test.ext:junit:1.1.3"
+    androidTestApi "androidx.test.espresso:espresso-core:3.4.0"
+
+    // Third Party
+    api 'androidx.core:core-splashscreen:1.0.0'
+    api 'com.intuit.sdp:sdp-android:1.1.0'
+    api 'com.intuit.ssp:ssp-android:1.1.0'
 }
 
 
