Update camera module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.mobizion.baseapplication"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -38,4 +38,5 @@ android {
 dependencies {
     implementation project(':base')
     implementation project(':gallary')
+    implementation project(':camera')
 }
