--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".App"
+        android:name="com.mobizion.xbase.app.XBaseApplication"
         android:theme="@style/Theme.BaseApplication">
         <activity
             android:name=".MainActivity"
