--- a/xUtils/build.gradle
+++ b/xUtils/build.gradle
@@ -1,20 +1,17 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
-        applicationId "com.mobizion.baseapplication"
         minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        targetSdk 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -30,13 +27,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
-        viewBinding true
-    }
 }
 
 dependencies {
-    implementation project(':xbase')
-    implementation project(':gallary')
-    implementation project(':camera')
+    implementation "androidx.core:core-ktx:1.8.0"
+    api "com.google.android.material:material:1.6.1"
 }
