--- a/xbase/build.gradle
+++ b/xbase/build.gradle
@@ -1,20 +1,17 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
-        applicationId "com.mobizion.baseapplication"
         minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        targetSdk 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -27,16 +24,19 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
     buildFeatures{
         viewBinding true
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 }
 
 dependencies {
-    implementation project(':xbase')
-    implementation project(':gallary')
-    implementation project(':camera')
+    api "androidx.core:core-ktx:1.8.0"
+    api "androidx.appcompat:appcompat:1.5.0"
+    api "androidx.navigation:navigation-dynamic-features-fragment:2.5.1"
+    api "io.insert-koin:koin-android:3.1.5"
+    // Koin Test features
+    testApi "io.insert-koin:koin-test:3.1.5"
 }
