--- a/xbase/build.gradle
+++ b/xbase/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -39,4 +39,6 @@ dependencies {
     api "io.insert-koin:koin-android:3.1.5"
     // Koin Test features
     testApi "io.insert-koin:koin-test:3.1.5"
+    api 'com.intuit.sdp:sdp-android:1.1.0'
+    api 'com.intuit.ssp:ssp-android:1.1.0'
 }
