--- a/xfilemanager/build.gradle
+++ b/xfilemanager/build.gradle
@@ -36,6 +36,7 @@ android {
 dependencies {
     def nav_version = "2.5.1"
     api project(':xbase')
+    api project(':xbaseadapter')
     api project(':xcommonlibs')
     api 'androidx.navigation:navigation-fragment-ktx:2.5.1'
     api 'androidx.navigation:navigation-ui-ktx:2.5.1'
