--- a/xcommonlibs/build.gradle
+++ b/xcommonlibs/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -30,7 +31,10 @@ android {
 }
 
 dependencies {
+    def glide_version = "4.12.0"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
     api "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    api "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 }
