--- a/xbase/build.gradle
+++ b/xbase/build.gradle
@@ -9,7 +9,6 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 33
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -35,6 +34,7 @@ android {
 dependencies {
     api "androidx.core:core-ktx:1.8.0"
     api "androidx.appcompat:appcompat:1.5.0"
+    api "com.google.android.material:material:1.6.1"
     api "androidx.navigation:navigation-dynamic-features-fragment:2.5.1"
     api "io.insert-koin:koin-android:3.1.5"
     // Koin Test features
