--- a/xutils/build.gradle
+++ b/xutils/build.gradle
@@ -31,5 +31,5 @@ android {
 
 dependencies {
     implementation "androidx.core:core-ktx:1.8.0"
-    api "com.google.android.material:material:1.6.1"
+    implementation "com.google.android.material:material:1.6.1"
 }
