--- a/xutils/build.gradle
+++ b/xutils/build.gradle
@@ -30,6 +30,6 @@ android {
 }
 
 dependencies {
-    implementation "androidx.core:core-ktx:1.8.0"
-    implementation "com.google.android.material:material:1.6.1"
+    api "androidx.core:core-ktx:1.8.0"
+    api "com.google.android.material:material:1.6.1"
 }
