Add No action bar theme

--- a/xfilemanager/src/main/AndroidManifest.xml
+++ b/xfilemanager/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity
             android:name=".XFileManagerActivity"
+            android:theme="@style/Theme.Design.NoActionBar"
             android:exported="false" />
     </application>
 
