--- a/xcommonlibs/build.gradle
+++ b/xcommonlibs/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10'
 }
 
 android {
@@ -37,4 +38,7 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
     api "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
+    api 'com.intuit.sdp:sdp-android:1.1.0'
+    api 'com.intuit.ssp:ssp-android:1.1.0'
+    api 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
 }
