--- a/xbase/build.gradle
+++ b/xbase/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -41,4 +42,18 @@ dependencies {
     testApi "io.insert-koin:koin-test:3.1.5"
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.mirzatahirbaig'
+            artifactId = 'baseApplication-xbase'
+            version = '0.1'
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
