--- a/xbase/build.gradle
+++ b/xbase/build.gradle
@@ -30,6 +30,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
+
 }
 
 dependencies {
@@ -45,10 +52,12 @@ dependencies {
 }
 
 publishing {
+
     publications {
+
         release(MavenPublication) {
             groupId = 'com.github.mirzatahirbaig'
-            artifactId = 'baseApplication-xbase'
+            artifactId = 'xbase'
             version = '0.1'
 
             afterEvaluate {
