--- a/xbase/build.gradle
+++ b/xbase/build.gradle
@@ -51,17 +51,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
 
-publishing {
 
-    publications {
-
-        release(MavenPublication) {
-            groupId = 'com.github.mirzatahirbaig'
-            artifactId = 'xbase'
-            version = '0.1'
-
-            afterEvaluate {
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
                 from components.release
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.github.mirzatahirbaig'
+                artifactId = 'xbase'
+                version = '0.1'
             }
         }
     }
