Update new changes

--- a/xgallary/build.gradle
+++ b/xgallary/build.gradle
@@ -35,6 +35,11 @@ android {
 
 dependencies {
     implementation project(':xbase')
+    implementation project(':xbaseadapter')
+    implementation project(':xcommonlibs')
+    implementation project(':xutils')
+    implementation project(':xresource')
+    implementation project(':xdrawable')
     def lifecycle_version = "2.5.1"
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
     // LiveData
