--- a/xcommonlibs/build.gradle
+++ b/xcommonlibs/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -41,4 +42,10 @@ dependencies {
     api 'com.intuit.sdp:sdp-android:1.1.0'
     api 'com.intuit.ssp:ssp-android:1.1.0'
     api 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
+    api 'com.blankj:utilcodex:1.31.1'
+    api 'androidx.appcompat:appcompat:1.4.1'
+    api 'com.google.android.material:material:1.9.0'
+    api 'androidx.constraintlayout:constraintlayout:2.1.3'
+    api 'com.quickbirdstudios:opencv:4.5.3.0'
+    api project(':DialogX')
 }
