--- a/xgallary/src/main/AndroidManifest.xml
+++ b/xgallary/src/main/AndroidManifest.xml
@@ -2,4 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mobizion.gallary">
 
+    <application>
+        <activity
+            android:name=".activity.gallery.XGalleryActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".activity.viewer.PhotoViewerActivity"
+            android:exported="false"/>
+    </application>
+
 </manifest>
